--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "testing": "node ./scripts/function.js"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "console-read-write": "^0.1.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "mobx": "^6.3.10",
+    "mobx-react-lite": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
