--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "testing": "node ./scripts/function.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
