--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "console-read-write": "^0.1.1",
+    "dayjs": "^1.10.8",
     "expo": "~44.0.0",
     "expo-font": "^10.0.4",
     "expo-status-bar": "~1.2.0",
