--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.26.1",
     "console-read-write": "^0.1.1",
     "dayjs": "^1.10.8",
     "expo": "~44.0.0",
