--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.26.1",
     "console-read-write": "^0.1.1",
-    "dayjs": "^1.10.8",
+    "dayjs": "^1.11.0",
     "expo": "~44.0.0",
+    "expo-app-loading": "^1.3.0",
     "expo-font": "^10.0.4",
+    "expo-notifications": "^0.14.1",
+    "expo-permissions": "^13.1.1",
     "expo-status-bar": "~1.2.0",
     "mobx": "^6.3.10",
     "mobx-react-lite": "^3.2.2",
