--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-calendar-picker": "^7.1.2",
     "react-native-calendario": "^3.1.0",
     "react-native-calendars": "^1.1279.0",
     "react-native-gesture-handler": "^2.1.0",
