--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.0",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
+    "expo-device": "^4.2.0",
     "expo-font": "^10.0.4",
     "expo-notifications": "^0.14.1",
     "expo-permissions": "^13.1.1",
