--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.26.1",
     "console-read-write": "^0.1.1",
+    "date-fns": "^2.28.0",
     "dayjs": "^1.11.0",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
@@ -41,7 +42,8 @@
     "react-native-screens": "^3.10.1",
     "react-native-shadow-2": "^6.0.0",
     "react-native-svg": "^12.3.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "use-calendar-matrix": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
