--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/datetimepicker": "^6.2.0",
     "@react-native-community/netinfo": "^9.0.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
@@ -35,6 +36,7 @@
     "react-native-calendar-picker": "^7.1.2",
     "react-native-calendario": "^3.1.0",
     "react-native-calendars": "^1.1279.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-render-html": "^6.3.4",
